Aggiunto supporto per scegliere l'AnswerSet ottimale. NB: Se non viene definito un modo per pesare gli AnswerSets allora non vengono generati e la mancata esistenza di OptimalAnswerSet genera errori. E' per come e' definito il codice. Se si prova a controllare prima l'esistenza o meno di OptimalAnswerSets lancia comunque un errore, quindi bisogna mettere necessariamente un peso nei programmi ASP. Se non volete usare pesi, scommentate la riga indicata (ASPPlayer:425)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .idea/
 target/
+encodings/myASPPrograms
 
 # Compiled class file
 *.class
@@ -27,5 +28,4 @@ hs_err_pid*
 captainsonar.iml
 src/main/resources/.DS_Store
 src/main/resources/ai/.DS_Store
-src/main/resources/view/assets/.DS_Store
 src/main/resources/view/assets/.DS_Store
