ATTENZIONE ATTENZIONE: adesso si possono fare partite piu' lungheeeee. Abbiamo aggiunto nel pom la dipendenza ad un jar fatto da noi, che sarebbe la versione modificata del'ambiente codingame. Il jar si trova nel nostro canale. Provate e fateci sapere

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,15 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.codingame</groupId>
+            <artifactId>gameengine</artifactId>
+            <version>prova-1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/core-prova-1.0.0.jar</systemPath>
+        </dependency>
+
         <dependency>
             <groupId>com.codingame.gameengine</groupId>
             <artifactId>core</artifactId>
