--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
         <dependency>
             <groupId>com.codingame</groupId>
             <artifactId>gameengine</artifactId>
-            <version>prova-1.0.0</version>
+            <version>1.0.2-prova</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/core-prova-1.0.0.jar</systemPath>
+            <systemPath>${project.basedir}/lib/core-1.0.2-prova.jar</systemPath>
         </dependency>
 
         <dependency>
